tools/k3d/11-traefik.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0
          # image: traefik/traefik:latest
          imagePullPolicy: IfNotPresent
          args:
            # - --accesslog
            - --api.insecure
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --global.checknewversion=false
            - --global.sendanonymoususage=false
            - --log.level=DEBUG
            - --providers.kubernetescrd
            - --providers.kubernetesgateway
            - --experimental.kubernetesgateway
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          tty: true

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
