tools/k3d/21-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-ingressclass
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  # ingressClassName: traefik-ingressclass
  rules:
    - host: ingress.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  whoami
                port:
                  number: 80
